...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homeFragment"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/home_title"
        android:layout_width="225dp"
        android:layout_height="34dp"
        android:text="@string/home_fragment_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
...
